--- a/lucatinder-cliente/src/app/app.component.html
+++ b/lucatinder-cliente/src/app/app.component.html
@@ -88,5 +88,5 @@
 
 <app-menu></app-menu>
 <!-- <app-listado></app-listado> -->
-<app-chat></app-chat>
+<app-alta-perfil></app-alta-perfil>
 <app-footer></app-footer>
