Actualizacion crear usuario Angular

--- a/lucatinder-cliente/src/app/componentes/alta-perfil/alta-perfil.component.html
+++ b/lucatinder-cliente/src/app/componentes/alta-perfil/alta-perfil.component.html
@@ -20,8 +20,8 @@
     <div class="row col-3 m-0 p-0">
       <label for="perfil_genero" class="col-6 fs-12">soy</label>
       <select formControlName="genero" class="form-control col-6" id="perfil_genero" required>
-        <option value="'M'">Hombre</option>
-        <option value="'F'">Mujer</option>
+        <option value="M">Hombre</option>
+        <option value="F">Mujer</option>
       </select>
     </div>
     <div class="row col-3 m-0 p-0">
@@ -34,8 +34,8 @@
     <div class="row col-6 m-0 p-0">
       <label for="perfil_preferencia_sexual" class="col-3 fs-12">Busco</label>
       <select formControlName="preferencias" class="form-control col-9" id="perfil_preferencia_sexual" required>
-        <option value="'M'">Hombre</option>
-        <option value="'F'">Mujer</option>
+        <option value="M">Hombre</option>
+        <option value="F">Mujer</option>
       </select>
     </div>
     <div class="row col-3 m-0 p-0">
@@ -43,8 +43,8 @@
       <input class="form-control col-6" id="perfil_preferencia_edad_min" type="number" min="18" max="90" required />
     </div>
     <div class="row col-3 m-0 p-0">
-      <label for="perfil_preferencia_edad_min" class="col-6 fs-12 text-center">y</label>
-      <input class="form-control col-6" id="perfil_preferencia_edad_min" type="number" min="18" max="90" required>
+      <label for="perfil_preferencia_edad_max" class="col-6 fs-12 text-center">y</label>
+      <input class="form-control col-6" id="perfil_preferencia_edad_max" type="number" min="18" max="90" required>
     </div>
   </div>
   <div class="row m-0 mt-4">
