--- a/lucatinder-cliente/src/app/componentes/listado/listado.component.html
+++ b/lucatinder-cliente/src/app/componentes/listado/listado.component.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <div class="container p-0">
     <div class="d-flex flex-row flex-wrap p-0 m-0 pt-lg-5">
         <div class="col-12 col-md-6 col-lg-4 col-xl-3 p-2" *ngFor="let perfil of perfiles">
@@ -14,3 +16,5 @@
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
