--- a/lucatinder-cliente/src/app/componentes/menu/menu.component.html
+++ b/lucatinder-cliente/src/app/componentes/menu/menu.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="col-lg-2 d-none d-lg-block">
         <li class="nav-item col-lg-12 px-lg-0">
-          <a class="nav-link p-lg-0" routerLink="/" routerLinkActive="active"><img src="../../../assets/img/logo.png" class="img-fluid col-10" /></a>
+          <a class="nav-link p-lg-0" routerLink="/listado" routerLinkActive="active"><img src="../../../assets/img/logo.png" class="img-fluid col-10" /></a>
         </li>
       </div>
       <div class="row col-lg-5 m-0 p-0">
