--- a/lucatinder-cliente/src/app/componentes/chat/chat.component.html
+++ b/lucatinder-cliente/src/app/componentes/chat/chat.component.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <div class="container-fluid p-0 contenedor-titulo">
     <h1 class="text-center py-5 mb-0">Mira todos tus <span><i class="fas fa-comments color-propio"></i></span></h1>
 </div>
@@ -8,3 +10,5 @@
     <p class="h3 text-lmuted">Estamos trabajando duro para que puedas disfrutar de la mejor experiencia en <span class="color-propio font-weight-bold">lucatinder</span>.</p>
     <p><a href="#" class="h4 text-info">¡Sigue conociendo nuevos usuarios!</a></p>
 </div>
+
+<app-footer></app-footer>
