--- a/lucatinder-cliente/src/app/componentes/contactos/contactos.component.html
+++ b/lucatinder-cliente/src/app/componentes/contactos/contactos.component.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <div class="container-fluid p-0 contenedor-titulo">
     <h1 class="text-center py-5 mb-0">Mira todos tus <span><i class="fas fa-heart color-propio"></i></span></h1>
 </div>
@@ -27,3 +29,5 @@
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
