--- a/lucatinder-cliente/src/app/componentes/descartes/descartes.component.html
+++ b/lucatinder-cliente/src/app/componentes/descartes/descartes.component.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <div class="container-fluid p-0 contenedor-titulo">
     <h1 class="text-center py-5 mb-0">Mira todos tus <span><i class="fas fa-times text-info"></i></span></h1>
 </div>
@@ -26,3 +28,5 @@
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
