--- a/lucatinder-cliente/src/app/componentes/menu/menu.component.html
+++ b/lucatinder-cliente/src/app/componentes/menu/menu.component.html
@@ -29,7 +29,7 @@
       </div>
       <div class="row col-lg-5 m-0 p-0">
         <li class="nav-item col-12 col-lg-5 px-lg-0 px-xl-2">
-          <a class="nav-link p-0 pb-2" routerLink="/encuentros" routerLinkActive="active"><span class="nav-propio pb-1"><i
+          <a class="nav-link p-0 pb-2" routerLink="/selector" routerLinkActive="active"><span class="nav-propio pb-1"><i
                 class="fas fa-glass-cheers text-info pr-2"></i>Encuentros</span></a>
         </li>
         <li class="nav-item col-12 col-lg-3 px-lg-0 px-xl-2">
