--- a/lucatinder-cliente/src/app/componentes/selector/selector.component.html
+++ b/lucatinder-cliente/src/app/componentes/selector/selector.component.html
@@ -1,3 +1,5 @@
+<app-menu></app-menu>
+
 <div class="d-flex align-items-center my-5">
     <div class="card col-12 col-md-10 col-lg-8 col-xl-6 mx-auto p-3">
         <div class="card-head pb-0">
@@ -20,3 +22,5 @@
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
