--- a/lucatinder-cliente/src/app/componentes/descartes/descartes.component.html
+++ b/lucatinder-cliente/src/app/componentes/descartes/descartes.component.html
@@ -4,7 +4,7 @@
     <h1 class="text-center py-5 mb-0">Mira todos tus <span><i class="fas fa-times text-info"></i></span></h1>
 </div>
 
-<div class="py-5 my-2 text-center" *ngIf="descartes == null">
+<div class="py-5 my-2 text-center" *ngIf="descartes.length == 0">
     <p><i class="far fa-smile-wink fs-5 color-propio"></i></p>
     <p class="display-4 pt-3">¡Genial! No has descartado a nadie.</p>
     <p class="h3 text-lmuted">Sigue conociendo gente interesante en <span
@@ -12,7 +12,7 @@
     <p><a href="#" class="h4 text-info">¡Volver al inicio!</a></p>
 </div>
 
-<div class="container p-0" *ngIf="descartes != null">
+<div class="container p-0" *ngIf="descartes.length != 0">
     <div class="d-flex flex-row flex-wrap p-0 m-0 pt-lg-5">
         <div class="col-12 col-md-6 col-lg-4 col-xl-3 p-2" *ngFor="let perfil of descartes">
             <div class="card card-propio p-3">
