--- a/lucatinder-cliente/src/app/componentes/contactos/contactos.component.html
+++ b/lucatinder-cliente/src/app/componentes/contactos/contactos.component.html
@@ -9,7 +9,7 @@
         <p><i class="far fa-grin-beam-sweat fs-5 color-propio"></i></p>
     <p class="display-4 pt-3">¡Oh! Parece que aún no has dado <span><i class="fas fa-heart color-propio"></i></span> a nadie.</p>
     <p class="h3 text-lmuted">Estamos seguros de que tu media naranja te está esperando en <span class="color-propio font-weight-bold">lucatinder</span>.</p>
-    <p><a href="#" class="h4 text-info">¡Echa un vistazo!</a></p>
+    <p><a routerLink="/selector" class="h4 text-info">¡Echa un vistazo!</a></p>
 </div>
 
 
