--- a/lucatinder-cliente/src/app/componentes/descartes/descartes.component.html
+++ b/lucatinder-cliente/src/app/componentes/descartes/descartes.component.html
@@ -9,7 +9,7 @@
     <p class="display-4 pt-3">¡Genial! No has descartado a nadie.</p>
     <p class="h3 text-lmuted">Sigue conociendo gente interesante en <span
             class="color-propio font-weight-bold">lucatinder</span>.</p>
-    <p><a href="#" class="h4 text-info">¡Volver al inicio!</a></p>
+    <p><a routerLink="/selector" class="h4 text-info">¡Volver al inicio!</a></p>
 </div>
 
 <div class="container p-0" *ngIf="descartes != null">
