--- a/lucatinder-cliente/src/app/componentes/matches/matches.component.html
+++ b/lucatinder-cliente/src/app/componentes/matches/matches.component.html
@@ -8,7 +8,7 @@
   <p><i class="fas fa-hourglass-half fs-5 color-propio"></i></p>
   <p class="display-4 pt-3">Aún no tienes ningún match.</p>
   <p class="h3 text-lmuted">No te preocupes, seguro que cuando menos te los esperes surge la chispa.</p>
-  <p><a href="#" class="h4 text-info">¡Volver al inicio y seguir conociendo gente!</a></p>
+  <p><a routerLink="/selector" class="h4 text-info">¡Volver al inicio y seguir conociendo gente!</a></p>
 </div>
 
 <div class="container p-0">
