Estilo modificado botones

--- a/lucatinder-cliente/src/app/componentes/selector/selector.component.html
+++ b/lucatinder-cliente/src/app/componentes/selector/selector.component.html
@@ -7,8 +7,8 @@
                 class="card-img-top" alt="Imagen de un perfil">
         </div>
         <div class="p-0 d-flex justify-content-around fila-iconos-selector">
-            <button class="mb-0" (click) = "calificar(true)"><i class="fas fa-heart fa-7x color-propio"></i></button>
-            <button class="mb-0" (click) = "calificar(false)"><i class="fas fa-times fa-7x text-info"></i></button>
+            <button class="mb-0 bg-none b-none" (click) = "calificar(true)"><i class="fas fa-heart fa-7x color-propio"></i></button>
+            <button class="mb-0 bg-none b-none" (click) = "calificar(false)"><i class="fas fa-times fa-7x text-info"></i></button>
         </div>
         <div class="card-body pb-0 pt-5">
             <div class="row m-0 p-0">
