Angular todo dia 4

--- a/lucatinder-cliente/src/app/componentes/perfil/perfil.component.html
+++ b/lucatinder-cliente/src/app/componentes/perfil/perfil.component.html
@@ -1,5 +1,26 @@
 <app-menu></app-menu>
 
-<h1>COMPONENTE PERFIL</h1>
+
+
+<div class="d-flex align-items-center my-5">
+    <div class="card col-12 col-md-10 col-lg-8 col-xl-6 mx-auto p-3">
+        <div class="card-head pb-0">
+            <img src="https://image.freepik.com/foto-gratis/chica-posando-gafas-sol_1153-1985.jpg"
+                class="card-img-top" alt="Imagen de un perfil">
+        </div>
+        <div class="p-0 d-flex justify-content-around fila-iconos-selector">
+                <button class="mb-0 bg-none b-none"><i class="fas fa-comment-dots text-success fa-7x"></i></button>
+            </div>
+        <div class="card-body pb-0 pt-5">
+            <div class="row m-0 p-0">
+                <h2 class="card-title col-6 text-left">{{usuario.nombre}}</h2>
+                <h3 class="card-title col-6 text-right">{{usuario.edad}} años</h3>
+                </div>
+                <p>{{usuario.descripcion}}</p>
+        </div>
+    </div>
+</div>
+
+
 
 <app-footer></app-footer>
