--- a/lucatinder-cliente/src/app/componentes/selector/selector.component.html
+++ b/lucatinder-cliente/src/app/componentes/selector/selector.component.html
@@ -12,8 +12,8 @@
         </div>
         <div class="card-body pb-0 pt-5">
             <div class="row m-0 p-0">
-                <h2 class="card-title col-6 text-left">{{perfil.nombre}}</h2>
-                <h3 class="card-title col-6 text-right">{{perfil.edad}} años</h3>
+                <h2 class="card-title col-6 text-left">{{contacto.nombre}}</h2>
+                <h3 class="card-title col-6 text-right">{{contacto.edad}} años</h3>
             </div>
  
         </div>
