--- a/lucatinder-cliente/src/app/componentes/matches/matches.component.html
+++ b/lucatinder-cliente/src/app/componentes/matches/matches.component.html
@@ -4,24 +4,24 @@
   <h1 class="text-center py-5 mb-0">Mira todos tus <span><i class="fas fa-grin-hearts color-propio"></i></span></h1>
 </div>
 
-<div class="py-5 my-2 text-center">
+<div class="py-5 my-2 text-center" class="py-5 my-2 text-center" *ngIf="matches.length == 0">
   <p><i class="fas fa-hourglass-half fs-5 color-propio"></i></p>
   <p class="display-4 pt-3">Aún no tienes ningún match.</p>
   <p class="h3 text-lmuted">No te preocupes, seguro que cuando menos te los esperes surge la chispa.</p>
   <p><a routerLink="/selector" class="h4 text-info">¡Volver al inicio y seguir conociendo gente!</a></p>
 </div>
 
-<div class="container p-0">
+<div class="container p-0" *ngIf="matches.length != 0">
   <div class="d-flex flex-row flex-wrap p-0 m-0 pt-lg-5">
-    <div class="col-12 col-md-6 col-lg-4 col-xl-3 p-2" *ngFor="let perfil of perfiles">
+    <div class="col-12 col-md-6 col-lg-4 col-xl-3 p-2" *ngFor="let match of matches">
       <div class="card card-propio p-3">
         <img
           src="https://img.freepik.com/foto-gratis/calle-moda-estilo-pelo-hermosa-chica_1139-844.jpg?size=626&ext=jpg"
           class="card-img-top" alt="Imagen de un perfil">
         <div class="card-body p-0 pt-3">
           <div class="row m-0 p-0">
-            <h4 class="card-title col-8 m-0 p-0 text-left">{{perfil.nombre}}</h4>
-            <h4 class="card-title col-4 m-0 p-0 text-right">{{perfil.edad}}</h4>
+            <h4 class="card-title col-8 m-0 p-0 text-left">{{match.nombre}}</h4>
+            <h4 class="card-title col-4 m-0 p-0 text-right">{{match.edad}}</h4>
           </div>
         </div>
       </div>
