--- a/lucatinder-cliente/src/app/componentes/selector/selector.component.html
+++ b/lucatinder-cliente/src/app/componentes/selector/selector.component.html
@@ -1,5 +1,24 @@
 <app-menu></app-menu>
-
+<p *ngIf="match == 'true'">Prueba</p>
+<div class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Modal body text goes here.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <div class="d-flex align-items-center my-5">
     <div class="card col-12 col-md-10 col-lg-8 col-xl-6 mx-auto p-3">
         <div class="card-head pb-0">
