--- a/lucatinder-cliente/src/app/componentes/descartes/descartes.component.html
+++ b/lucatinder-cliente/src/app/componentes/descartes/descartes.component.html
@@ -20,7 +20,7 @@
                     class="card-img-top" alt="Imagen de un perfil">
                 <div class="card-body p-0 pt-3">
                     <div class="row m-0 p-0">
-                        <h4 class="card-title col-8 m-0 p-0 text-left">{{descarte.nombre}}</h4>
+                        <h4 class="card-title col-8 m-0 p-0 text-left">s{{descarte.nombre}}</h4>
                         <h4 class="card-title col-4 m-0 p-0 text-right">{{descarte.edad}}</h4>
                     </div>
                 </div>
