--- a/lucatinder-cliente/src/app/componentes/perfil-propio/perfil-propio.component.html
+++ b/lucatinder-cliente/src/app/componentes/perfil-propio/perfil-propio.component.html
@@ -58,8 +58,9 @@
   </div>
 
   <div class="row col-12 pt-3 d-lg-flex justify-content-end m-0 p-0">
-      <div class="col-12 col-md-6 col-lg-2 mb-3 mb-md-0 pr-md-2 pr-lg-0 mr-lg-3"><button class="btn btn-info btn-block" (click)="guardarUsuario()">Guardar</button></div>
-      <div class="col-12 col-md-6 col-lg-2 pl-md-2 pl-lg-0"><button class="btn btn-danger btn-block" (click)="borrarUsuario()">Eliminar</button></div>
+      <div class="col-12 col-md-4 col-lg-2 mb-3 mb-md-0 pr-md-2 pr-lg-0 mr-lg-3"><button class="btn btn-outline-info btn-block" (click)="guardarUsuario()">Guardar</button></div>
+      <div class="col-12 col-md-4 col-lg-2 mb-3 mb-md-0 pr-md-2 pr-lg-0 mr-lg-3"><button class="btn btn-outline-danger btn-block" (click)="borrarUsuario()">Eliminar</button></div>
+      <div class="col-12 col-md-4 col-lg-2 pl-md-2 pl-lg-0"><button class="btn btn-dark btn-block" (click)="salir()">Salir</button></div>
   </div>
 
 
