Modificaciones en angular

--- a/lucatinder-cliente/src/app/componentes/selector/selector.component.html
+++ b/lucatinder-cliente/src/app/componentes/selector/selector.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 
 <div class="container-fluid p-0 contenedor-titulo" *ngIf="match == 'true'">
-        <h1 class="text-center py-5 mb-0">Has tenido un match<span><i class="fas fa-grin-hearts color-propio"></i></span> ve a <i>  MATCH</i> para verlo.</h1>
+        <h1 class="text-center py-5 mb-0">Has tenido un <span class="color-propio font-weigh-bold">match</span> ve a <a routerLink="/matches"><span><i class="fas fa-grin-hearts color-propio"></i></span></a> para verlo.</h1>
       </div>
 
 <div class="modal" tabindex="-1" role="dialog">
