--- a/lucatinder-cliente/src/app/componentes/contactos/contactos.component.html
+++ b/lucatinder-cliente/src/app/componentes/contactos/contactos.component.html
@@ -6,26 +6,29 @@
 
 
 <div class="py-5 my-2 text-center" *ngIf="contactos.length == 0">
-        <p><i class="far fa-grin-beam-sweat fs-5 color-propio"></i></p>
-    <p class="display-4 pt-3">¡Oh! Parece que aún no has dado <span><i class="fas fa-heart color-propio"></i></span> a nadie.</p>
-    <p class="h3 text-lmuted">Estamos seguros de que tu media naranja te está esperando en <span class="color-propio font-weight-bold">lucatinder</span>.</p>
+    <p><i class="far fa-grin-beam-sweat fs-5 color-propio"></i></p>
+    <p class="display-4 pt-3">¡Oh! Parece que aún no has dado <span><i class="fas fa-heart color-propio"></i></span> a
+        nadie.</p>
+    <p class="h3 text-lmuted">Estamos seguros de que tu media naranja te está esperando en <span
+            class="color-propio font-weight-bold">lucatinder</span>.</p>
     <p><a routerLink="/selector" class="h4 text-info">¡Echa un vistazo!</a></p>
 </div>
 
-
 <div class="container p-0" *ngIf="contactos.length != 0">
-    <div class="d-flex flex-row flex-wrap p-0 m-0 py-lg-5">
+    <div class="d-flex flex-row flex-wrap p-0 m-0 pt-lg-5">
         <div class="col-12 col-md-6 col-lg-4 col-xl-3 p-2" *ngFor="let contacto of contactos">
-            <div class="card card-propio p-3">
-                <img src="https://img.freepik.com/foto-gratis/calle-moda-estilo-pelo-hermosa-chica_1139-844.jpg?size=626&ext=jpg"
-                    class="card-img-top" alt="Imagen de un perfil">
-                <div class="card-body p-0 pt-3">
-                    <div class="row m-0 p-0">
-                        <h4 class="card-title col-8 m-0 p-0 text-left">{{contacto.nombre}}</h4>
-                        <h4 class="card-title col-4 m-0 p-0 text-right">{{contacto.edad}}</h4>
+            <a routerLink="/perfil/{{contacto.id}}" class="text-body card-propio">
+                <div class="card  p-3">
+                    <img src="https://img.freepik.com/foto-gratis/calle-moda-estilo-pelo-hermosa-chica_1139-844.jpg?size=626&ext=jpg"
+                        class="card-img-top" alt="Imagen de un perfil">
+                    <div class="card-body p-0 pt-3">
+                        <div class="row m-0 p-0">
+                            <h4 class="card-title col-8 m-0 p-0 text-left">{{contacto.nombre}}</h4>
+                            <h4 class="card-title col-4 m-0 p-0 text-right">{{contacto.edad}}</h4>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
 </div>
