--- a/lucatinder-cliente/src/app/componentes/matches/matches.component.html
+++ b/lucatinder-cliente/src/app/componentes/matches/matches.component.html
@@ -14,17 +14,19 @@
 <div class="container p-0" *ngIf="matches.length != 0">
   <div class="d-flex flex-row flex-wrap p-0 m-0 pt-lg-5">
     <div class="col-12 col-md-6 col-lg-4 col-xl-3 p-2" *ngFor="let match of matches">
-      <div class="card card-propio p-3">
-        <img
-          src="https://img.freepik.com/foto-gratis/calle-moda-estilo-pelo-hermosa-chica_1139-844.jpg?size=626&ext=jpg"
-          class="card-img-top" alt="Imagen de un perfil">
-        <div class="card-body p-0 pt-3">
-          <div class="row m-0 p-0">
-            <h4 class="card-title col-8 m-0 p-0 text-left">{{match.nombre}}</h4>
-            <h4 class="card-title col-4 m-0 p-0 text-right">{{match.edad}}</h4>
+      <a routerLink="/perfil/{{match.id}}" class="text-body card-propio">
+        <div class="card  p-3">
+          <img
+            src="https://img.freepik.com/foto-gratis/calle-moda-estilo-pelo-hermosa-chica_1139-844.jpg?size=626&ext=jpg"
+            class="card-img-top" alt="Imagen de un perfil">
+          <div class="card-body p-0 pt-3">
+            <div class="row m-0 p-0">
+              <h4 class="card-title col-8 m-0 p-0 text-left">{{match.nombre}}</h4>
+              <h4 class="card-title col-4 m-0 p-0 text-right">{{match.edad}}</h4>
+            </div>
           </div>
         </div>
-      </div>
+      </a>
     </div>
   </div>
 </div>
