Modificaciones en angular-cambio de src en imagenes

--- a/lucatinder-cliente/src/app/componentes/perfil-propio/perfil-propio.component.html
+++ b/lucatinder-cliente/src/app/componentes/perfil-propio/perfil-propio.component.html
@@ -12,7 +12,7 @@
   <div class="row p-0 m-0 col-12">
 
     <div class="col-12 col-lg-6 d-flex align-items-center">
-      <img src="https://media.metrolatam.com/2018/08/23/mujer1-234853dc0e0619b7be7317871413304c-1200x600.jpg"
+      <img src="{{perfil.img}}"
         alt="Foto de perfil" class="img-fluid col-12 p-0">
     </div>
 
