--- a/lucatinder-cliente/src/app/componentes/contactos/contactos.component.html
+++ b/lucatinder-cliente/src/app/componentes/contactos/contactos.component.html
@@ -19,7 +19,7 @@
         <div class="col-12 col-md-6 col-lg-4 col-xl-3 p-2" *ngFor="let contacto of contactos">
             <a routerLink="/perfil/{{contacto.id}}" class="text-body card-propio">
                 <div class="card  p-3">
-                    <img src="https://img.freepik.com/foto-gratis/calle-moda-estilo-pelo-hermosa-chica_1139-844.jpg?size=626&ext=jpg"
+                    <img src="{{contacto.img}}"
                         class="card-img-top" alt="Imagen de un perfil">
                     <div class="card-body p-0 pt-3">
                         <div class="row m-0 p-0">
