--- a/lucatinder-cliente/src/app/componentes/matches/matches.component.html
+++ b/lucatinder-cliente/src/app/componentes/matches/matches.component.html
@@ -17,7 +17,7 @@
       <a routerLink="/perfil/{{match.id}}" class="text-body card-propio">
         <div class="card  p-3">
           <img
-            src="https://img.freepik.com/foto-gratis/calle-moda-estilo-pelo-hermosa-chica_1139-844.jpg?size=626&ext=jpg"
+            src="{{match.img}}"
             class="card-img-top" alt="Imagen de un perfil">
           <div class="card-body p-0 pt-3">
             <div class="row m-0 p-0">
