--- a/lucatinder-cliente/src/app/componentes/perfil/perfil.component.html
+++ b/lucatinder-cliente/src/app/componentes/perfil/perfil.component.html
@@ -5,7 +5,7 @@
 <div class="d-flex align-items-center my-5">
     <div class="card col-12 col-md-10 col-lg-8 col-xl-6 mx-auto p-3">
         <div class="card-head pb-0">
-            <img src="https://image.freepik.com/foto-gratis/chica-posando-gafas-sol_1153-1985.jpg"
+            <img src="{{usuario.img}}"
                 class="card-img-top" alt="Imagen de un perfil">
         </div>
         <div class="p-0 d-flex justify-content-around fila-iconos-selector">
