--- a/lucatinder-cliente/src/app/componentes/perfil-propio/perfil-propio.component.html
+++ b/lucatinder-cliente/src/app/componentes/perfil-propio/perfil-propio.component.html
@@ -11,7 +11,7 @@
 <form [formGroup]="formulario" class="my-4 py-4">
   <div class="row p-0 m-0 col-12">
 
-    <div class="col-12 col-lg-6 d-flex align-items-center">
+    <div class="col-12 col-lg-6">
       <img src="{{perfil.img}}"
         alt="Foto de perfil" class="img-fluid col-12 p-0">
     </div>
