--- a/lucatinder-cliente/src/app/componentes/perfil/perfil.component.html
+++ b/lucatinder-cliente/src/app/componentes/perfil/perfil.component.html
@@ -9,7 +9,7 @@
                 class="card-img-top" alt="Imagen de un perfil">
         </div>
         <div class="p-0 d-flex justify-content-around fila-iconos-selector">
-                <button class="mb-0 bg-none b-none"><i class="fas fa-comment-dots text-success fa-7x"></i></button>
+                <a class="mb-0 bg-none b-none" routerLink="/chat"><i class="fas fa-comment-dots text-success fa-7x"></i></a>
             </div>
         <div class="card-body pb-0 pt-5">
             <div class="row m-0 p-0">
